Added api to register users Added api to authenticate users Added rest controller advice to handle exeptions

--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -10,7 +10,16 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+    open-in-view: false
 
   cache:
     caffeine:
       spec: maximumSize=100
+
+
+server:
+  error:
+    include-binding-errors: always
+    include-message: always
+    include-stacktrace: on_param
+    include-exception: false
