--- a/api/pom.xml
+++ b/api/pom.xml
@@ -98,6 +98,14 @@
 			<version>2.16.0</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>io.seruco.encoding</groupId>
+			<artifactId>base62</artifactId>
+			<version>0.1.3</version>
+		</dependency>
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
